--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <title>1</title>
     </head>
     <body>
-        <hr>
-        <div class="timer1"></div>
-        <hr>
+        <div class="layout"></div>
         <script src="js/main.js"></script>
     </body>
 </html>
